src/objects/RecurringDonationSchedule__c.object
<CustomObject>
    <description>Contains the current and past schedule(s) for each Recurring Donation. Records in this object are system maintained and should never be edited directly.</description>
    <label>Recurring Donation Schedule</label>
    <nameField>
        <displayFormat>RD-Schedule-{0000000000}</displayFormat>
        <label>Recurring Schedule Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <description>Establishes whether the Recurring Donation Schedule is active or inactive. Read only</description>
        <formula>OR( ISBLANK( EndDate__c ), AND( EndDate__c &gt;= TODAY(), NOT( StartDate__c &gt; EndDate__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Establishes whether the Recurring Donation Schedule is active or inactive based on End Date. Read only.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Campaign associated with the Recurring Donation when this schedule record was created.</description>
        <inlineHelpText>The Campaign associated with the Recurring Donation when this schedule record was created.</inlineHelpText>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Donation Schedules</relationshipLabel>
        <relationshipName>RecurringDonationSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayOfMonth__c</fullName>
        <description>Sets the specific day of the month for future installment Opportunities when the Installment Period is Monthly.</description>
        <inlineHelpText>Sets the specific day of the month for future installment Opportunities when the Installment Period is Monthly.</inlineHelpText>
        <label>Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                    <isActive>true</isActive>
                </value>
                <value>
                    <fullName>30</fullName>
                    <isActive>true</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The ending date, if required, for this schedule record.</description>
        <inlineHelpText>The ending date, if required, for this schedule record.</inlineHelpText>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>For integration with external services or data warehouses.</description>
        <externalId>true</externalId>
        <inlineHelpText>For integration with external services or data warehouses.</inlineHelpText>
        <label>External Schedule Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentAmount__c</fullName>
        <description>The amount for each installment Opportunity.</description>
        <inlineHelpText>The amount for each installment Opportunity.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstallmentFrequency__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Defines the installment schedule of this Recurring Donation along with Installment Period. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</description>
        <inlineHelpText>Defines the installment schedule of this Recurring Donation along with Installment Period. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Installment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstallmentPeriod__c</fullName>
        <description>Defines the installment schedule of this Recurring Donation along with Installment Frequency. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</description>
        <inlineHelpText>Defines the installment schedule of this Recurring Donation along with Installment Frequency. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set when the schedule record represents Recurring Donation pause date range</description>
        <inlineHelpText>Set when the schedule record represents Recurring Donation pause date range</inlineHelpText>
        <label>Is Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</description>
        <inlineHelpText>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurringDonation__c</fullName>
        <description>The Recurring Donation this schedule record is associated with.</description>
        <inlineHelpText>The Recurring Donation this schedule record is associated with.</inlineHelpText>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Recurring Donation Schedules</relationshipLabel>
        <relationshipName>RecurringDonationSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The effective date for this schedule record.</description>
        <inlineHelpText>The effective date for this schedule record.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <description>Contains additional details for the schedule. For example, a paused reason for a paused schedule.</description>
        <inlineHelpText>Contains additional details for the schedule. For example, a paused reason for a paused schedule.</inlineHelpText>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>